--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Acceuil</title>
 </head>
 <body>
-      <p>LalalalaTESTs</p>
+<script>
+import React from 'react';
+import { Text, View } from 'react-native';
+
+const MyApp = () => {
+  return (
+    <View style={{ flex: 1, justifyContent: "center", alignItems: "center" }}>
+      <Text>
+        TEST
+      </Text>
+    </View>
+  );
+}
+
+export default MyApp;
+</script>
 </body>
 </html>
